Correctly handle overflow in username and email

--- a/app/assets/stylesheets/left-menu.scss
+++ b/app/assets/stylesheets/left-menu.scss
@@ -27,12 +27,20 @@
         .username {
             margin: 0;
             margin-top: 5px;
-            line-height: 12px;
+            line-height: 14px;
+            text-overflow: ellipsis;
+            display: block;
+            width: 200px;
+            overflow: hidden;
         }
 
         .email {
             font-size: 12px;
             color: #8a97b9;
+            text-overflow: ellipsis;
+            display: block;
+            width: 200px;
+            overflow: hidden;
         }
     }
 
